force-app/main/default/objects/RetailStore/fields/Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue__c</fullName>
    <description>Actual monthly revenue of this store, used as benchmark for financial projections on new expansion sites</description>
    <label>Monthly Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>