force-app/main/default/objects/RetailStore/fields/Store_Format__c.field-meta.xml
<CustomField>
    <fullName>Store_Format__c</fullName>
    <description>Format of this retail store, used to match comparable stores for financial projection benchmarking</description>
    <label>Store Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supermarket</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Hypermarket</fullName>
            </value>
            <value>
                <fullName>Kirana</fullName>
            </value>
            <value>
                <fullName>Online Dark Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>