force-app/main/default/objects/RetailStore/fields/Store_Size_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Store_Size_Sqft__c</fullName>
    <description>Physical size of the store in square feet, used for comparable store matching</description>
    <label>Store Size (sq ft)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>